2005-03-07  Sebastien Pouliot  <sebastien@ximian.com>

	* MD5CryptoServiceProvider.cs: Fixed #73404 to return right results
	if the data length is bigger than 2^32 bits.
	* SHA1CryptoServiceProvider.cs: Fixed #73404 to return right results
	if the data length is bigger than 2^32 bits.
	* SHA256Managed.cs: Fixed #73404 to return right results if the data
	length is bigger than 2^32 bits.

2005-03-03  Sebastien Pouliot  <sebastien@ximian.com>

	* RNGCryptoServiceProvider.cs: Added a new call in the static ctor
	to check if we're using a global handle. In that case we lock before
	calling the RNG.

2005-02-10  Sebastien Pouliot  <sebastien@ximian.com> 

	* DSA.cs: Weekly fix to case where DSAParameters.Counter is 0 :-(
	A new unit test was added for this specific case so it's hopefully
	the last fix for this. Fixed exception reporting to match NET_2_0.

2005-01-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* DSA.cs: Really fixed case where DSAParameters.Counter is 0.

2005-01-21  Sebastien Pouliot  <sebastien@ximian.com> 

	* DSA.cs: Handle the case where DSAParameters.Counter is 0.

2005-01-11  Sebastien Pouliot  <sebastien@ximian.com> 

	* CryptoConfig.cs: Added support to create RIPEMD160 and the new HMAC
	algorithms (HMACMD5, HMACRIPEMD160, HMACSHA256, HMACSHA384 and 
	HMACSHA512). This fix the unit tests failures in Mono.Security.dll in
	the NET_2_0 profile.
	* DSACryptoServiceProvider.cs: Import|ExportCspBlob throws 
	NotImplementedException (CryptoConvert class doesn't support DSA yet).
	* RSACryptoServiceProvider.cs: SignHash/VerifyHash defaults to SHA-1
	in 2.0. VerifyHash throw appropriate exception when no OID is 
	specified (1.0/1.1). Import|ExportCspBlob implemented using the
	CryptoConvert class.
	* RSAOAEPKeyExchangeDeformatter.cs: Throw exception if no key is 
	specified.
	* RSAOAEPKeyExchangeFormatter.cs: Throw exception if no key is 
	specified.
	* RSAPKCS1KeyExchangeFormatter.cs: Throw exception if no key is 
	specified.